WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277624
REGRESSION (
269500@main
Safari 17.5): Masked Curved Line Rendering Issue
https://bugs.webkit.org/show_bug.cgi?id=277624
Summary
REGRESSION (269500@main Safari 17.5): Masked Curved Line Rendering Issue
Sam
Reported
2024-08-05 03:07:03 PDT
Created
attachment 472061
[details]
The screenshot to demo what I mean Hi WebKit Team, I am experiencing an issue with Safari 17.5 where a curved line rendered using the C command in an SVG path is cut off when a mask is applied. The problem occurs under specific conditions with certain path coordinates. Issue Details: - The curved line is cut off when using the mask. - The issue disappears if the mask is removed. - Modifying the cubic path coordinates slightly (e.g., changing from -140.0679 to -140.0678) resolves the rendering problem. ``` <style> .line { position: absolute; display: block; width: 100%; height: 100%; overflow: visible; min-height: 1px; min-width: 1px; stroke: red; fill: red; } </style> <svg class="line" style="top: 50px; left: 50px;"> <defs> <mask id="__id121" maskUnits="userSpaceOnUse" x="-8" y="-8" width="266" height="457"> <rect x="-8" y="-8" width="266" height="457" fill="white"/> </mask> </defs> <g> <path mask="url(#__id121)" d="M3,440.1129 C191,-140.0679 270,-141.36806 240,436.2124" stroke-linecap="butt" stroke-width="8" fill="none" /> </g> </svg> <svg class="line" style="top: 50px; left: 650px;"> <defs> <mask id="__id123" maskUnits="userSpaceOnUse" x="-8" y="-8" width="266" height="457"> <rect x="-8" y="-8" width="266" height="457" fill="white"/> </mask> </defs> <g> <path mask="url(#__id123)" d="M3,440.1129 C191,-140.0678 270,-141.36806 240,436.2124" stroke-linecap="butt" stroke-width="8" fill="none" /> </g> </svg> ``` Comparison: - The first SVG uses the path coordinate -140.0679 and is cut off. - The second SVG uses the path coordinate -140.0678 and renders correctly. Could you please investigate this rendering issue? Thank you for your assistance.
Attachments
The screenshot to demo what I mean
(129.19 KB, image/png)
2024-08-05 03:07 PDT
,
Sam
no flags
Details
test case
(1.06 KB, text/html)
2024-08-05 13:20 PDT
,
Fujii Hironori
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2024-08-05 13:20:46 PDT
Created
attachment 472064
[details]
test case
Fujii Hironori
Comment 2
2024-08-05 13:21:32 PDT
I confirmed that it's reproducible with Windows port.
Fujii Hironori
Comment 3
2024-08-05 14:11:11 PDT
I did bisecting with my Windows port binaries. This seems to be a regression.
251482@main
good
260197@main
good
265290@main
good
267130@main
good
269118@main
good
269348@main
good
269647@main
bad
269911@main
bad
270065@main
bad
https://github.com/WebKit/WebKit/compare/d2b242779d24...63bf597ad4a3
Radar WebKit Bug Importer
Comment 4
2024-08-05 16:24:14 PDT
<
rdar://problem/133251058
>
Sam
Comment 5
2024-08-05 20:08:38 PDT
Thanks @Fujii Hironori a lot for looking at this issue. Any help that I can provide on this so far?
Sam
Comment 6
2024-08-14 21:05:06 PDT
Hi team, could I ask about the status of this bug please? Any chances that we can prioritise this please.
Fujii Hironori
Comment 7
2024-08-21 00:27:50 PDT
269500@main
is the regression point.
Yusuke Suzuki
Comment 8
2024-08-21 13:35:58 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32543
EWS
Comment 9
2024-08-22 21:51:55 PDT
Committed
282651@main
(bdbc42414835): <
https://commits.webkit.org/282651@main
> Reviewed commits have been landed. Closing PR #32543 and removing active labels.
Sam
Comment 10
2024-10-21 21:54:04 PDT
Hi WebKit Team, I am still experiencing an issue with Safari 18.0 where a curved line rendered using the C command in an SVG path is cut off when a mask is applied. Could you help me double check the ticket is resolved yet please? Thanks.
Fujii Hironori
Comment 11
2024-10-22 00:03:04 PDT
Safari 18 is still using old WebKit. Try Safari Technology Preview.
Simon Fraser (smfr)
Comment 12
2024-10-22 09:46:54 PDT
There is still an issue here, tracked by
bug 279105
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug