REGRESSION (269500@main Safari 17.5): Masked Curved Line Rendering Issue https://bugs.webkit.org/show_bug.cgi?id=277624 rdar://133251058

Reviewed by Cameron McCormack.

SVG mask implementation is incorrectly mixing repaint rect and bounding box.
We workaround the issue by passing RepaintRectCalculation::Accurate to enforce
child renderers to compute bounding boxes. But the right implementation should
distinguish repaint rect and bounding box as repaint rect is just used for
invalidation.

* LayoutTests/svg/masking/masker-mixing-repaint-rect-and-bounding-box-expected.html: Added.
* LayoutTests/svg/masking/masker-mixing-repaint-rect-and-bounding-box.html: Added.
* Source/WebCore/rendering/svg/RenderSVGResourceMasker.cpp:
(WebCore::RenderSVGResourceMasker::applyMask):
* Source/WebCore/rendering/svg/legacy/LegacyRenderSVGResourceGradient.cpp:
(WebCore::createMaskAndSwapContextForTextGradient):
(WebCore::clipToTextMask):
* Source/WebCore/rendering/svg/legacy/LegacyRenderSVGResourceMasker.cpp:
(WebCore::LegacyRenderSVGResourceMasker::applyResource):

Canonical link: https://commits.webkit.org/282651@main